--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pandas>=1.3.3
-plotly>=5.22.0
+pandas==2.2.2
+plotly==5.22.0
 Pyrebase4==4.8.0
-Requests>=2.32.3
-streamlit>=1.36.0
+Requests==2.32.3
+st_social_media_links==0.1.1
+streamlit==1.36.0
