Refreshing Expendi Logic

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,8 @@
 [client]
 showSidebarNavigation = false
+toolbarMode = "minimal"
+
+[theme]
+# The preset Streamlit theme that your custom theme inherits from.
+# One of "light" or "dark".
+base = "light"
