--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,42 @@
-numpy==2.0.0
-pandas==1.3.3
-Pillow==10.4.0
-plotly==5.22.0
-Requests==2.32.3
-st_social_media_links==0.1.1
-streamlit==1.36.0
+numpy==2.2.6
+pandas==2.2.3
+pillow==11.2.1
+plotly==6.1.1
+requests==2.32.3
+st-social-media-links==0.1.5
+streamlit==1.45.1
+altair==5.5.0
+attrs==25.3.0
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+gitdb==4.0.12
+GitPython==3.1.44
+idna==3.10
+Jinja2==3.1.6
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+MarkupSafe==3.0.2
+narwhals==1.41.0
+packaging==24.2
+protobuf==6.31.0
+pyarrow==20.0.0
+pydeck==0.9.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.36.2
+rpds-py==0.25.1
+six==1.17.0
+smmap==5.0.2
+soupsieve==2.7
+st-theme==1.2.3
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.1
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
