--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,15 @@ tornado==6.5.1
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
+cffi==1.17.1
+curl_cffi==0.11.1
+frozendict==2.4.6
+multitasking==0.0.11
+packcircles==0.14
+peewee==3.18.1
+platformdirs==4.3.8
+pycparser==2.22
+pyllist==0.3
+streamlit-plotly-events==0.0.6
+websockets==15.0.1
+yfinance==0.2.61
